# homework_12.2

./: .env  .gitignore  pyproject.toml
src/: masks.py  utils.py
tests/: test_generators.py  test_utils.py
