[tool.poetry]
name = "homework-12-2"
version = "0.1.0"
description = ""
authors = ["Bugrova Irina <bugrova147@yandex.ru>"]
readme = "README.md"
packages = [{include = "homework_12"}]

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.3"


[tool.poetry.group.lint.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
flake8 = "^7.1.1"
mypy = "^1.13.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
